# oap_part_2_project

./: .gitignore  ACHI UKR-ENG.xlsx  CMakeLists.txt  README.md  icpc2_icd10.xlsx  main.cpp
controller/: AuthService.cpp  AuthService.hpp  BcryptPasswordHasher.cpp  BcryptPasswordHasher.hpp  DatabaseManager.cpp  DatabaseManager.hpp  DoctorController.cpp  DoctorController.hpp  DoctorRepository.cpp  DoctorRepository.hpp  GcryptPasswordHasher.cpp  GcryptPasswordHasher.hpp  LookupRepository.cpp  LookupRepository.hpp  PasswordHasher.hpp  PatientController.cpp  PatientController.hpp  PatientRepository.cpp  PatientRepository.hpp  SeedImporter.cpp  SeedImporter.hpp  SessionContext.cpp  SessionContext.hpp  UserRepository.cpp  UserRepository.hpp  VisitController.cpp  VisitController.hpp  VisitRepository.cpp  VisitRepository.hpp
database/: db-journal  db.sqlite  init.sql
database/seed/: achi_codes.csv  icd10_codes.csv  icpc2_codes.csv
model/: Admin.cpp  Admin.hpp  Doctor.cpp  Doctor.hpp  Patient.cpp  Patient.hpp  Person.cpp  Person.hpp  User.cpp  User.hpp  Visit.cpp  Visit.hpp
tests/: RepositoryTests.cpp
view/: ChipWidget.cpp  ChipWidget.hpp  DoctorsWidget.cpp  DoctorsWidget.hpp  FlowLayout.cpp  FlowLayout.hpp  LoginDialog.cpp  LoginDialog.hpp  LookupPickerWidget.cpp  LookupPickerWidget.hpp  MainWindow.cpp  MainWindow.hpp  PatientDialog.cpp  PatientDialog.hpp  PatientVisitsDialog.cpp  PatientVisitsDialog.hpp  PatientsWidget.cpp  PatientsWidget.hpp  VisitDialog.cpp  VisitDialog.hpp  VisitsWidget.cpp  VisitsWidget.hpp
